fix(1238): overflow need auto

--- a/packages/theme-default/src/components/date-picker/app-popup.scss
+++ b/packages/theme-default/src/components/date-picker/app-popup.scss
@@ -5,7 +5,7 @@
 
   background-color: var(--sx-color-background);
   color: var(--sx-internal-color-text);
-  overflow: scroll;
+  overflow: auto;
 
   &.is-dark {
     background-color: var(--sx-color-surface-container-high);
